--- a/jumpingGame.css
+++ b/jumpingGame.css
@@ -1,4 +1,32 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: inherit;
+}
+
+html, body {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  font-size: 1.5rem;
+}
+
+#header, #footer {
+  text-align: center;
+  padding: 20px;
+}
+
+main {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: azure;
+}
+
+#canvas {
+  border: 10px solid greenyellow;
 }
