--- a/jumpingGame.css
+++ b/jumpingGame.css
@@ -6,12 +6,17 @@
 
 html, body {
   height: 100%;
+  box-sizing: border-box;
 }
 
 body {
   display: flex;
   flex-direction: column;
   font-size: 1.5rem;
+}
+
+h1 {
+  margin: 20px;
 }
 
 #header, #footer {
@@ -23,10 +28,10 @@ main {
   flex: 1;
   display: flex;
   justify-content: center;
-  align-items: center;
-  background-color: azure;
+  align-items: center;  
 }
 
-#canvas {
+#gameCanvas {
   border: 10px solid greenyellow;
+  /* background-color: azure; */
 }
