--- a/jumpingGame.css
+++ b/jumpingGame.css
@@ -36,8 +36,8 @@ main {
   /* background-color: azure; */
 }
 
-.speedGameProp {
-  max-width: 300px;
+.speedGameProp, ul {
+  max-width: 400px;
   width: 100%;
   margin: 5px auto;
   text-align: left;
